# arch4edu

./: .gitignore  .travis.yml  README.md  match-template.sh  move-package.sh  nvchecker.ini  remove-package.sh  show_aur_dependency.py  smart-add-package.py  test.txt
.github/: FUNDING.yml
.pacman/: x86_64.conf
act/: PKGBUILD  lilac.py  lilac.yaml
adms/: PKGBUILD
aic94xx-firmware/: .SRCINFO  .gitignore  LICENSE.aic94xx  PKGBUILD
anaconda/: PKGBUILD  lilac.py
anaconda2/: .gitignore  PKGBUILD  anaconda2.install  lilac.py  upgrade_helper.sh
android-emulator/: PKGBUILD  lilac.py
android-ndk/: PKGBUILD  lilac.py
android-platform/: PKGBUILD  lilac.py  lilac.yaml
android-sdk/: PKGBUILD  lilac.py
android-sdk-build-tools/: PKGBUILD  lilac.py
android-sdk-platform-tools/: PKGBUILD  lilac.py
android-studio/: PKGBUILD  lilac.py
annie/: PKGBUILD  lilac.py  lilac.yaml
annie-aarch64/: PKGBUILD  lilac.py
annie-armv6h/: PKGBUILD  lilac.py
annie-armv7h/: PKGBUILD  lilac.py  lilac.yaml
aomp-amdgpu/: PKGBUILD  adjust_rpath.patch  disable_ocl_tests.patch  lilac.yaml  remove_gcc_logic.patch
apache-lucene/: PKGBUILD
apm_planner-bin/: PKGBUILD  lilac.py
arch4edu-keyring/: .gitignore  PKGBUILD  arch4edu-keyring.install
arch4edu-mirrorlist/: PKGBUILD  lilac.py  lilac.yaml
arch4edu-mirrorlist-git/: PKGBUILD  lilac.py  lilac.yaml
archimedes-tools/: PKGBUILD  lilac.py  lilac.yaml  package.list
archlinux-java-run/: PKGBUILD
archlinuxarm-keyring/: download-files-from-github.sh  lilac.py  (+1 more)
x86_64/rocm/rocm-core/: CMakeLists.txt  PKGBUILD  rocm_version.c
(+5816 files in other folders)
